--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -83,12 +83,10 @@ div.menu {
 }
 
 #button {
-    .button-std();
-    padding-left: @gap3;
-    padding-right: @gap3;
-    padding-top: @gap1;
-    padding-bottom: @gap1;
+    .button1();
+    padding: @gap1 @gap3 @gap1 @gap3;
     font-size: @text2;
+    line-height: 1.5em;
     margin-right: 10px;
 }
 
