--- a/less/style.less
+++ b/less/style.less
@@ -84,9 +84,8 @@ div.login {
         }
 
         input.submit {
-            .button-std();
+            .button1();
             color: @gray8;
-            font-size: @text2;
             padding-left: @gap4;
             padding-right: @gap4;
             background-color: @green3;
