update repo structure

--- a/less/common.less
+++ b/less/common.less
@@ -13,10 +13,10 @@
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-@import "@shanhuio/lessbase/base.less";
-@import "@shanhuio/lessbase/layout.less";
-@import "@shanhuio/lessbase/links.less";
-@import "@shanhuio/lessbase/article.less";
+@import "@shanhuio/style/base.less";
+@import "@shanhuio/style/layout.less";
+@import "@shanhuio/style/links.less";
+@import "@shanhuio/style/article.less";
 
 // Theme color is blue
 @theme1: @blue1;
