--- a/less/dashboard.less
+++ b/less/dashboard.less
@@ -13,7 +13,7 @@
 // You should have received a copy of the GNU Affero General Public License
 // along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-@import "@shanhuio/lessbase/dialog.less";
+@import "@shanhuio/style/dialog.less";
 
 @import "./common.less";
 
